crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@generate_region_item_start.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/generate_region_item_start.v
---
lex: Code
prefix: ""
replacement: 21..21
in_decl_name: false
expectations:
  Keyword(GenerateMember)
