crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@inline_preproc_directive_keyword_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/inline_preproc_directive_keyword_prefix.v
---
lex: Code
prefix: "de"
replacement: 19..21
in_decl_name: false
expectations:
  DirectiveName
