crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@integer_literal_after_base.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/integer_literal_after_base.v
---
lex: Literal
prefix: ""
replacement: 25..25
expectations:
  <none>
