crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@integer_literal_after_signed.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/integer_literal_after_signed.v
---
lex: Literal
prefix: "s"
replacement: 24..25
in_decl_name: false
expectations:
  IntegerLiteralBase
