crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@keyword_replacement_module_prefix.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/keyword_replacement_module_prefix.v
---
lex: Code
prefix: "module"
replacement: 0..6
in_decl_name: false
expectations:
  Keyword(CompilationUnitMember)
