crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_block_comment.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_block_comment.v
---
lex: BlockComment
prefix: ""
replacement: 19..19
in_decl_name: false
expectations:
  <none>
