crates/ide/src/completion/snapshots/ide__completion__context__tests__context_fixtures@lex_decimal_literal.v.snap
---
source: crates/ide/src/completion/context.rs
expression: context_snapshot(&c)
input_file: crates/ide/src/completion/context/fixtures/lex_decimal_literal.v
---
lex: Literal
prefix: ""
replacement: 24..24
expectations:
  <none>
